--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,9 +3,9 @@ IF(WIN32)
 ENDIF()
 
 IF( LIBCITYGML_USE_OPENGL)
-  FIND_PACKAGE( OpenGL REQUIRED )
+  FIND_PACKAGE( opengl_system REQUIRED )
 ENDIF( LIBCITYGML_USE_OPENGL )
-FIND_PACKAGE( Xerces REQUIRED )
+FIND_PACKAGE( XercesC REQUIRED )
 
 IF( LIBCITYGML_DYNAMIC )
   ADD_DEFINITIONS( -DLIBCITYGML_DYNAMIC )
@@ -20,10 +20,9 @@ SET( PRG_SRCS citygmltest.cpp )
 
 ADD_EXECUTABLE( citygmltest ${PRG_SRCS} )
 
-TARGET_LINK_LIBRARIES( citygmltest citygml ${XERCESC_LIBRARY})
+TARGET_LINK_LIBRARIES( citygmltest citygml )
 IF(LIBCITYGML_USE_OPENGL)
   TARGET_COMPILE_DEFINITIONS( citygmltest PUBLIC LIBCITYGML_USE_OPENGL)
-  TARGET_LINK_LIBRARIES( citygmltest citygml ${OPENGL_LIBRARIES} )
 ENDIF(LIBCITYGML_USE_OPENGL)
 
 if(NOT DEFINED BIN_INSTALL_DIR)
